# physme

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: platformer.rs  simple.rs  simple3d.rs  top_down.rs
src/: broad.rs  common.rs  debug_shader.frag  debug_shader.vert  dim2.rs  dim3.rs  lib.rs
src/dim3/: collision.rs  mod.rs
