[package]
name = "physme"
description = "A simple 2d and 3d physics engine for bevy"
version = "0.2.4"
authors = ["Szymon Walter <waltersz@protonmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/walterpie/physme"
repository = "https://github.com/walterpie/physme"
license = "MIT"
keywords = ["gamedev", "physics", "rigid", "real-time", "aabb"]
categories = ["game-development"]

[dependencies]
smallvec = "1.4"
rstar = "0.8"
hashbrown = "0.9"
serde = "1.0"

[dependencies.bevy]
version = "0.3"
git = "https://github.com/bevyengine/bevy.git"
rev = "01ba7c44255059f833c2b90d3d6b7ac7e9c025ca"
